--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -1,5 +1,5 @@
 #background {
-    .background-images {
+    .login-background-images {
         height: 300px;
         background-size: cover;
         background-position: center;
