--- a/assets/scss/_blog.scss
+++ b/assets/scss/_blog.scss
@@ -1,12 +1,12 @@
 #background {
-    .background-images {
+    .blog-background-images {
         height: 300px;
         background-size: cover;
         background-position: center;
 
         h2 {
             text-align: center;
-            color: white;
+            color: black;
             padding-top: 120px;
             font-family: monospace;
         }
