--- a/assets/scss/_cart.scss
+++ b/assets/scss/_cart.scss
@@ -14,7 +14,7 @@
 
 }
 
-#products {
+#cart-products {
     .basket-products {
         margin-top: 53px;
         box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, .1), 0 1px 1px 0 transparent, 0 1px 3px 0 rgba(0, 0, 0, .12) !important;
