--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,6 +1,8 @@
 #slider {
     margin-top: 75px;
-
+    .swiper-pagination-bullet{
+        background-color: #000;
+    }
     body {
         position: relative;
         height: 100%;
@@ -152,7 +154,7 @@
 
             li {
                 list-style: none;
-                border: 1px solid black;
+                border: 1px solid #8080801a;
                 width: 150px;
                 text-align: center;
                 height: 40px;
@@ -571,18 +573,19 @@
 
 #images {
     margin-top: 200px;
-
+    
     .image1 {
+        opacity: 1;
         overflow: hidden;
-
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
+
+        
     }
 
     .image2 {
@@ -590,10 +593,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -605,10 +607,9 @@
         img {
             width: 100%;
             margin-top: 23px;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -620,10 +621,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -635,10 +635,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -650,10 +649,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -664,10 +662,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -679,10 +676,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -694,10 +690,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -709,10 +704,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -723,10 +717,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
 
@@ -738,10 +731,9 @@
 
         img {
             width: 100%;
-
+            transition: 0.8s;
             &:hover {
                 transform: scale(1.1);
-                transition: 0.5s;
             }
         }
     }
@@ -757,10 +749,10 @@
         width: 100%;
         height: 170px;
         cursor: pointer;
+        transition: 0.8s;
 
         &:hover {
             margin-top: -20px;
-            transition: 0.5s;
         }
     }
 }
