--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -124,6 +124,7 @@
             }
         }
         .register{
+            margin-left: 5px;
             a{
                 text-decoration: none;
                 color:rgb(241, 6, 6) ;
