--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -3110,6 +3110,9 @@
   display: flex;
   gap: 20px;
 }
+#navbar .logo-pages .pages ul .active-navbar a {
+  color: red;
+}
 #navbar .logo-pages .pages ul li {
   list-style: none;
 }
