Add New Section

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -21,9 +21,9 @@
                 display: flex;
                 gap: 20px;
 
-                .active-navbar {
+                .active-menu {
                     a{
-                        color: red;
+                        color: #d14031;
                     }
                     
                 }
