--- a/assets/scss/_register.scss
+++ b/assets/scss/_register.scss
@@ -40,6 +40,7 @@
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+            caret-color: rgb(241, 6, 6);
         }
     }
 
@@ -60,6 +61,7 @@
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+            caret-color: rgb(241, 6, 6);
         }
     }
 
@@ -80,6 +82,7 @@
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+            caret-color: rgb(241, 6, 6);
         }
     }
 
@@ -100,6 +103,7 @@
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+            caret-color: rgb(241, 6, 6);
         }
         i{
             color: gray;
@@ -131,6 +135,7 @@
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+            caret-color: rgb(241, 6, 6);
         }
         i{
             color: gray;
