--- a/assets/scss/_forgotpassword.scss
+++ b/assets/scss/_forgotpassword.scss
@@ -40,6 +40,7 @@
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+            caret-color: rgb(241, 6, 6);
         }
     }
 
