--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -1,8 +1,10 @@
 #slider {
     margin-top: 75px;
-    .swiper-pagination-bullet{
+
+    .swiper-pagination-bullet {
         background-color: #000;
     }
+
     body {
         position: relative;
         height: 100%;
@@ -169,77 +171,116 @@
         }
     }
 
-    .products {
-        width: 100%;
-        height: 560px;
-        margin-top: 50px;
-        overflow: hidden;
 
-        a {
+    .all-products {
+        display: flex !important;
 
-            img {
-                transition: s;
-                width: 100%;
-                height: 400px;
-            }
-        }
-
-        .name {
-            margin-top: 10px;
+        .products {
+            width: 100%;
+            height: 560px;
+            margin-top: 50px;
+            overflow: hidden;
 
             a {
-                text-decoration: none;
-                color: gray;
-                font-family: monospace;
 
-                &:hover {
-                    color: red;
-                    transition: 0.8s;
+                img {
+                    transition: s;
+                    width: 100%;
+                    height: 400px;
+
                 }
+            }
+
+            .name {
+                margin-top: 10px;
+
+                a {
+                    text-decoration: none;
+                    color: gray;
+                    font-family: monospace;
+
+                    &:hover {
+                        color: red;
+                        transition: 0.8s;
+                    }
+                }
+            }
+
+            .category-name {
+                a {
+                    text-decoration: none;
+                    color: black;
+                    font-family: initial;
+                    font-size: 24px;
+
+                    &:hover {
+                        color: red;
+                        transition: 0.8s;
+                    }
+                }
+            }
+
+            .price-button {
+                display: flex;
+                margin-top: 15px;
+
+                p {
+                    color: gray;
+                    font-family: monospace;
+                }
+
+                button {
+                    border: none;
+                    margin-left: 167px;
+                    background-color: #d14031;
+                    border-radius: 0;
+
+                    &:hover {
+                        background-color: rgb(172, 2, 2);
+                        transition: 0.5s;
+                    }
+                }
+
+                .btn2 {}
+
             }
         }
 
-        .category-name {
-            a {
-                text-decoration: none;
-                color: black;
-                font-family: initial;
-                font-size: 24px;
+        .wishlist-cart {
+            opacity: 0;
+            transition: 0.5s;
+            margin-left: -85px;
+            margin-top: 75px;
+            font-size: 22px;
+            transition: 0.5s;
+        }
 
-                &:hover {
-                    color: red;
-                    transition: 0.8s;
-                }
+        i {
+            cursor: pointer;
+            color: red;
+            border: 1px solid white;
+            border-radius: 50%;
+            background-color: white;
+            width: 35px;
+            height: 35px;
+            padding-top: 5px;
+            padding-left: 5px;
+
+            &:nth-child(2) {
+                cursor: pointer;
+                color: #000;
+                padding-top: 6px;
+                padding-left: 4px
             }
         }
 
-        .price-button {
-            display: flex;
-            margin-top: 15px;
-
-            p {
-                color: gray;
-                font-family: monospace;
+        &:hover {
+            .wishlist-cart {
+                opacity: 1;
             }
-
-            button {
-                border: none;
-                margin-left: 167px;
-                background-color: #d14031;
-                border-radius: 0;
-
-                &:hover {
-                    background-color: rgb(172, 2, 2);
-                    transition: 0.5s;
-                }
-            }
-
-            .btn2{
-                
-            }
-
         }
     }
+
 
 }
 
@@ -577,19 +618,21 @@
 
 #gallery {
     margin-top: 200px;
-    
+
     .image1 {
         opacity: 1;
         overflow: hidden;
+
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
         }
 
-        
+
     }
 
     .image2 {
@@ -598,6 +641,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -612,6 +656,7 @@
             width: 100%;
             margin-top: 23px;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -626,6 +671,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -640,6 +686,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -654,6 +701,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -667,6 +715,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -681,6 +730,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -695,6 +745,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -709,6 +760,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -722,6 +774,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
@@ -736,6 +789,7 @@
         img {
             width: 100%;
             transition: 0.8s;
+
             &:hover {
                 transform: scale(1.1);
             }
