--- a/assets/scss/_login.scss
+++ b/assets/scss/_login.scss
@@ -40,6 +40,7 @@
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+            caret-color: rgb(241, 6, 6);
         }
     }
 
@@ -60,6 +61,7 @@
             border: 1px solid gray;
             outline: none;
             padding-left: 15px;
+            caret-color: rgb(241, 6, 6);
         }
         i{
             color: black;
