--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -135,57 +135,89 @@
   text-decoration: none;
   color: black;
 }
-#products .products {
+#products .all-products {
+  display: flex !important;
+}
+#products .all-products .products {
   width: 100%;
   height: 560px;
   margin-top: 50px;
   overflow: hidden;
 }
-#products .products a img {
+#products .all-products .products a img {
   transition: s;
   width: 100%;
   height: 400px;
 }
-#products .products .name {
+#products .all-products .products .name {
   margin-top: 10px;
 }
-#products .products .name a {
+#products .all-products .products .name a {
   text-decoration: none;
   color: gray;
   font-family: monospace;
 }
-#products .products .name a:hover {
+#products .all-products .products .name a:hover {
   color: red;
   transition: 0.8s;
 }
-#products .products .category-name a {
+#products .all-products .products .category-name a {
   text-decoration: none;
   color: black;
   font-family: initial;
   font-size: 24px;
 }
-#products .products .category-name a:hover {
+#products .all-products .products .category-name a:hover {
   color: red;
   transition: 0.8s;
 }
-#products .products .price-button {
+#products .all-products .products .price-button {
   display: flex;
   margin-top: 15px;
 }
-#products .products .price-button p {
+#products .all-products .products .price-button p {
   color: gray;
   font-family: monospace;
 }
-#products .products .price-button button {
+#products .all-products .products .price-button button {
   border: none;
   margin-left: 167px;
   background-color: #d14031;
   border-radius: 0;
 }
-#products .products .price-button button:hover {
+#products .all-products .products .price-button button:hover {
   background-color: rgb(172, 2, 2);
   transition: 0.5s;
 }
+#products .all-products .wishlist-cart {
+  opacity: 0;
+  transition: 0.5s;
+  margin-left: -85px;
+  margin-top: 75px;
+  font-size: 22px;
+  transition: 0.5s;
+}
+#products .all-products i {
+  cursor: pointer;
+  color: red;
+  border: 1px solid white;
+  border-radius: 50%;
+  background-color: white;
+  width: 35px;
+  height: 35px;
+  padding-top: 5px;
+  padding-left: 5px;
+}
+#products .all-products i:nth-child(2) {
+  cursor: pointer;
+  color: #000;
+  padding-top: 6px;
+  padding-left: 4px;
+}
+#products .all-products:hover .wishlist-cart {
+  opacity: 1;
+}
+
 #our-services {
   margin-top: 100px;
 }
@@ -1405,6 +1437,88 @@
   box-shadow: none;
   border-color: rgba(128, 128, 128, 0.2117647059);
 }
+#product-sidebar .all-products {
+  display: flex !important;
+}
+#product-sidebar .all-products .products {
+  width: 100%;
+  height: 560px;
+  margin-top: 50px;
+  overflow: hidden;
+}
+#product-sidebar .all-products .products a img {
+  transition: s;
+  width: 100%;
+  height: 400px;
+}
+#product-sidebar .all-products .products .name {
+  margin-top: 10px;
+}
+#product-sidebar .all-products .products .name a {
+  text-decoration: none;
+  color: gray;
+  font-family: monospace;
+}
+#product-sidebar .all-products .products .name a:hover {
+  color: red;
+  transition: 0.8s;
+}
+#product-sidebar .all-products .products .category-name a {
+  text-decoration: none;
+  color: black;
+  font-family: initial;
+  font-size: 24px;
+}
+#product-sidebar .all-products .products .category-name a:hover {
+  color: red;
+  transition: 0.8s;
+}
+#product-sidebar .all-products .products .price-button {
+  display: flex;
+  margin-top: 15px;
+}
+#product-sidebar .all-products .products .price-button p {
+  color: gray;
+  font-family: monospace;
+}
+#product-sidebar .all-products .products .price-button button {
+  border: none;
+  margin-left: 167px;
+  background-color: #d14031;
+  border-radius: 0;
+}
+#product-sidebar .all-products .products .price-button button:hover {
+  background-color: rgb(172, 2, 2);
+  transition: 0.5s;
+}
+#product-sidebar .all-products .wishlist-cart {
+  opacity: 0;
+  transition: 0.5s;
+  margin-left: -85px;
+  margin-top: 75px;
+  font-size: 22px;
+  transition: 0.5s;
+}
+#product-sidebar .all-products i {
+  cursor: pointer;
+  color: red;
+  border: 1px solid white;
+  border-radius: 50%;
+  background-color: white;
+  width: 33px;
+  height: 33px;
+  padding-top: 5px;
+  padding-left: 5px;
+}
+#product-sidebar .all-products i:nth-child(2) {
+  cursor: pointer;
+  color: #000;
+  padding-top: 6px;
+  padding-left: 4px;
+}
+#product-sidebar .all-products:hover .wishlist-cart {
+  opacity: 1;
+}
 #product-sidebar .products {
   margin-top: 50px;
 }
@@ -2045,6 +2159,7 @@
   border: 1px solid gray;
   outline: none;
   padding-left: 15px;
+  caret-color: rgb(241, 6, 6);
 }
 #login-form .password-label {
   margin-top: 30px;
@@ -2062,6 +2177,7 @@
   border: 1px solid gray;
   outline: none;
   padding-left: 15px;
+  caret-color: rgb(241, 6, 6);
 }
 #login-form .password-input i {
   color: black;
@@ -2163,6 +2279,7 @@
   border: 1px solid gray;
   outline: none;
   padding-left: 15px;
+  caret-color: rgb(241, 6, 6);
 }
 #register-form .last-name-label {
   margin-top: 30px;
@@ -2179,6 +2296,7 @@
   border: 1px solid gray;
   outline: none;
   padding-left: 15px;
+  caret-color: rgb(241, 6, 6);
 }
 #register-form .email-address-label {
   margin-top: 30px;
@@ -2195,6 +2313,7 @@
   border: 1px solid gray;
   outline: none;
   padding-left: 15px;
+  caret-color: rgb(241, 6, 6);
 }
 #register-form .password-label {
   margin-top: 30px;
@@ -2212,6 +2331,7 @@
   border: 1px solid gray;
   outline: none;
   padding-left: 15px;
+  caret-color: rgb(241, 6, 6);
 }
 #register-form .password-input i {
   color: gray;
@@ -2240,6 +2360,7 @@
   border: 1px solid gray;
   outline: none;
   padding-left: 15px;
+  caret-color: rgb(241, 6, 6);
 }
 #register-form .confirm-password-input i {
   color: gray;
@@ -2587,6 +2708,7 @@
   border: 1px solid gray;
   outline: none;
   padding-left: 15px;
+  caret-color: rgb(241, 6, 6);
 }
 #forgot-password-form .send-button {
   margin-top: 20px;
@@ -3181,11 +3303,13 @@
 #navbar .search-input {
   right: 113px;
   position: absolute;
-  top: 103px;
+  top: 125px;
+  width: 85%;
 }
 #navbar .search-input input {
   border: none;
   outline: none;
+  width: 100%;
 }
 #navbar .login-register {
   width: 230px;
