--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -171,106 +171,103 @@
         }
     }
 
+    .products {
+        width: 100%;
+        height: 560px;
+        margin-top: 50px;
+        overflow: hidden;
 
-    .all-products {
-        display: flex !important;
+        a {
 
-        .products {
-            width: 100%;
-            height: 560px;
-            margin-top: 50px;
-            overflow: hidden;
+            img {
+                transition: s;
+                width: 100%;
+                height: 400px;
+
+            }
+        }
+
+        .name {
+            margin-top: 10px;
 
             a {
+                text-decoration: none;
+                color: gray;
+                font-family: monospace;
 
-                img {
-                    transition: s;
-                    width: 100%;
-                    height: 400px;
-
+                &:hover {
+                    color: red;
+                    transition: 0.8s;
                 }
-            }
-
-            .name {
-                margin-top: 10px;
-
-                a {
-                    text-decoration: none;
-                    color: gray;
-                    font-family: monospace;
-
-                    &:hover {
-                        color: red;
-                        transition: 0.8s;
-                    }
-                }
-            }
-
-            .category-name {
-                a {
-                    text-decoration: none;
-                    color: black;
-                    font-family: initial;
-                    font-size: 24px;
-
-                    &:hover {
-                        color: red;
-                        transition: 0.8s;
-                    }
-                }
-            }
-
-            .price-button {
-                display: flex;
-                margin-top: 15px;
-
-                p {
-                    color: gray;
-                    font-family: monospace;
-                }
-
-                button {
-                    border: none;
-                    margin-left: 167px;
-                    background-color: #d14031;
-                    border-radius: 0;
-
-                    &:hover {
-                        background-color: rgb(172, 2, 2);
-                        transition: 0.5s;
-                    }
-                }
-
-                .btn2 {}
-
             }
         }
+
+        .category-name {
+            a {
+                text-decoration: none;
+                color: black;
+                font-family: initial;
+                font-size: 24px;
+
+                &:hover {
+                    color: red;
+                    transition: 0.8s;
+                }
+            }
+        }
+
+        .price-button {
+            display: flex;
+            margin-top: 15px;
+
+            p {
+                color: gray;
+                font-family: monospace;
+            }
+
+            button {
+                border: none;
+                margin-left: 167px;
+                background-color: #d14031;
+                border-radius: 0;
+
+                &:hover {
+                    background-color: rgb(172, 2, 2);
+                    transition: 0.5s;
+                }
+            }
+
+        }
+    }
+
+    .product {
+        position: relative;
 
         .wishlist-cart {
-            opacity: 0;
             transition: 0.5s;
-            margin-left: -85px;
-            margin-top: 75px;
+            position: absolute;
+            top: 70px;
+            right: 30px;
             font-size: 22px;
-            transition: 0.5s;
-        }
+            opacity: 0;
 
-        i {
-            cursor: pointer;
-            color: red;
-            border: 1px solid white;
-            border-radius: 50%;
-            background-color: white;
-            width: 35px;
-            height: 35px;
-            padding-top: 5px;
-            padding-left: 5px;
-
-            &:nth-child(2) {
+            i {
                 cursor: pointer;
-                color: #000;
-                padding-top: 6px;
-                padding-left: 4px
+                color: red;
+                border: 1px solid white;
+                border-radius: 50%;
+                background-color: white;
+                width: 35px;
+                height: 35px;
+                padding-top: 5px;
+                padding-left: 5px;
+
+                &:nth-child(2) {
+                    cursor: pointer;
+                    color: #000;
+                    padding-top: 6px;
+                    padding-left: 4px
+                }
             }
         }
 
@@ -279,8 +276,8 @@
                 opacity: 1;
             }
         }
-    }
 
+    }
 
 }
 
