--- a/assets/scss/_productdetail.scss
+++ b/assets/scss/_productdetail.scss
@@ -67,7 +67,7 @@
 
         .add-basket-button {
             margin-top: 20px;
-
+            gap: 10px;
             button {
                 width: 200px;
                 height: 50px;
@@ -75,7 +75,13 @@
                 color: white;
                 border: none;
                 font-family: auto;
-
+                &:nth-child(2){
+                    background-color: green;
+                    &:hover {
+                        background-color: rgb(2, 78, 2);
+                        transition: 0.5s;
+                    }
+                }
                 &:hover {
                     background-color: rgb(172, 2, 2);
                     transition: 0.5s;
